# Edogine

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake
cmake/Modules/: FindBox2D.cmake  FindSDL2.cmake
examples/: CMakeLists.txt
examples/scenes/: main.cpp
extlibs/libs-msvc12/x64/: Box2D-d.lib  Box2D.lib
extlibs/libs-msvc12/x86/: Box2D-d.lib  Box2D.lib
include/Edogine/: Config.hpp  Edogine.hpp
include/Edogine/Core/: Context.hpp  GameEngine.hpp  GameScene.hpp  ResourceManager.hpp  SceneManager.hpp  SceneManager.inl
include/Edogine/Graphics/: Animator.hpp  Sprite.hpp
include/Edogine/System/: Clock.hpp  Time.hpp  Vector2.hpp  Vector2.inl
src/: CMakeLists.txt
src/Edogine/Core/: GameEngine.cpp  GameScene.cpp  ResourceManager.cpp  SceneManager.cpp
src/Edogine/Graphics/: Animator.cpp  Sprite.cpp
src/Edogine/System/: Clock.cpp  Time.cpp
